data inserashen to the tree works +tests on the constractor